# Feibi_desktop

./: .gitignore  README.md  feibi_pet.spec  main.py  pet_config.json  pyi_rth_tkinter_manual.py  pyproject.toml  requirements.txt
feibi_pet/: animation.py  app.py  audio.py  chat_client.py  chat_memory.py  chat_ui.py  config.py  config_actions.py  config_api.py  config_audio.py  config_defaults.py  config_loader.py  config_models.py  config_utils.py  config_window.py  pet.py  windowing.py
skills/: phoebe.txt
